[metadata]
name = discodos
description = remember and analyze your DJ sets using data from Discogs and AcousticBrainz
long_description = README.md
long_description_content_type = text/x-markdown
author = J0J0 Todos
home-page = https://github.com/joj0/discodos
project_urls =
    Bug Tracker = https://github.com/joj0/discodos/issues
    Documentation = https://github.com/joj0/discodos/master/blob/README.md
    Source Code = https://github.com/joj0/discodos/
test_suite = tests
license = GPLv3+
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Sound/Audio
    Environment :: Console

[files]
packages =
    discodos

[entry_points]
    console_scripts =
        disco  =  discodos.cmd.cli:main
        discosync  =  discodos.cmd.sync:main

