[metadata]
name = discodos
description = remember and analyze your DJ sets using data from Discogs and AcousticBrainz
long_description = README.md
long_description_content_type = text/x-markdown
author = J0J0 Todos
home_page = https://discodos.jojotodos.net
project_urls =
    Bug Tracker = https://github.com/joj0/discodos/issues
    Documentation = https://discodos.readthedocs.io
    Source Code = https://github.com/joj0/discodos/
test_suite = tests
license = GPLv3+
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Environment :: Console

[files]
packages =
    discodos

[entry_points]
    console_scripts =
        disco  =  discodos.cmd.cli:main
        discosync  =  discodos.cmd.sync:main

[pbr]
skip_authors = 1
