[metadata]
name = discodos
description = The DJ and record collectors toolbox.
long_description = README.md
long_description_content_type = text/markdown
author = J0J0 Todos
home_page = https://discodos.jojotodos.net
project_urls =
    Bug Tracker = https://github.com/joj0/discodos/issues
    Documentation = https://discodos.readthedocs.io
    Source Code = https://github.com/joj0/discodos/
test_suite = tests
license = GPLv3+
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio
    Environment :: Console

[files]
packages =
    discodos

[entry_points]
    console_scripts =
        discosync  =  discodos.cmd.sync:main
        dsc =  discodos.cmd23:main_cmd

[pbr]
skip_authors = 1

[flake8]
extend-ignore = E501, E225
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .eggs
    discodos_logo.py
